# xiao-c-word2vec

./: .gitignore  CMakeLists.txt  README.md  compute-accuracy.c  distance.c  hello.c  word-analogy.c  word2phrase.c  word2vec.c
